--- a/src/assets/styles/write.css
+++ b/src/assets/styles/write.css
@@ -154,7 +154,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* background-image: url(../images/bg.svg); */
+    background-image: url(../images/bg.png);
     background-position: 0rem 0rem;
     background-repeat: no-repeat;
     background-size: cover;
